Iniciando as flex-box

--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 <body>
     <header>
         <dev class="container">
-            <h2>
-                Netflix
-            </h2>
+            <h2 class="logo">NETFLIX</h2>
             <nav>
                 <a href="#">Inicio</a>
                 <a href="#">Séries</a>
