Inserindo imagem e descrição

--- a/index.html
+++ b/index.html
@@ -19,8 +19,14 @@
         </dev>
     </header>
     <div class="login">
-
     </div>
-
+    <main>
+        <div class="filme-principal">
+            <div class="container">
+                <h3 class="titulo">Legacies</h3>
+                <p class="descricao">Hope Mikaelson, descendente da linhagem mais poderosa de vampiros, lobisomens e bruxas, frequenta a Escola Salvatore para Jovens e Superdotados, um refúgio onde ela pode aprender a controlar suas habilidades e impulsos sobrenaturais.</p>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
