--- a/index.html
+++ b/index.html
@@ -36,5 +36,9 @@
             </div>
         </div>
     </main>
+
+
+
+    <script src="https://kit.fontawesome.com/06fbdb1c51.js" crossorigin="anonymous"></script>
 </body>
 </html>
