Finalizando clone do projeto Netflix

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <dev class="container">
+        <div class="container">
             <h2 class="logo">NETFLIX</h2>
             <nav>
                 <a href="#">Inicio</a>
@@ -22,7 +22,7 @@
                 <a href="#">Filmes</a>
                 <a href="#">Documentarios</a>
             </nav>
-        </dev>
+        </div>
     </header>
     <div class="login">
     </div>
@@ -46,7 +46,7 @@
     </main>
 
     <div class="carrosel-filmes">
-        <div class="owl-carrosel owl-theme">
+        <div class="owl-carrousel owl-theme">
             <div class="item">
                 <img class="box-filme" src="img/mini1.jpg" alt="" srcset="">
             </div>
