--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </main>
 
     <div class="carrosel-filmes">
-        <div class="owl-carrousel owl-theme">
+        <div class="owl-carousel owl-theme">
             <div class="item">
                 <img class="box-filme" src="img/mini1.jpg" alt="" srcset="">
             </div>
